fix bug 2067 - added text-align:left to .yotpo

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -8,9 +8,13 @@
     font-family: Verdana;
     font-size: 14px;
     line-height: 17px;
-    color: $gray;  
+    color: $gray;
+    text-align: left;
+
   }
+  text-align: left;
 }
+
 .yotpo {
 /* Colors */
 
